Java 16 toList